// Define una interfaz para figuras geométricas
interface FiguraGeometrica {
    double calcularArea();
    double calcularPerimetro();
    String obtenerNombre();
}